test(
    'phosphor-power-sequencer-tests',
    executable(
        'phosphor-power-sequencer-tests',
        'basic_device_tests.cpp',
        'chassis_tests.cpp',
        'config_file_parser_tests.cpp',
        'gpios_only_device_tests.cpp',
        'pmbus_driver_device_tests.cpp',
        'rail_tests.cpp',
        'standard_device_tests.cpp',
        'system_tests.cpp',
        'ucd90160_device_tests.cpp',
        'ucd90320_device_tests.cpp',
        'ucd90x_device_tests.cpp',
        dependencies: [gmock, gtest, nlohmann_json_dep, phosphor_logging],
        link_args: dynamic_linker,
        build_rpath: get_option('oe-sdk').allowed() ? rpath : '',
        link_with: [phosphor_power_sequencer_library, libpower],
        implicit_include_directories: false,
        include_directories: ['.', '../src', '../..'],
    ),
)
